--- a/packages/business/data/pubspec.yaml
+++ b/packages/business/data/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   retrofit: any
+  injectable: any
+  get_it: any
   domain:
     path: ../domain
 
@@ -21,6 +23,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   retrofit_generator: any
   json_serializable: any
+  injectable_generator: any
   build_runner: any
 
 # For information on the generic Dart part of this file, see the
