--- a/packages/business/usecase/pubspec.yaml
+++ b/packages/business/usecase/pubspec.yaml
@@ -1,4 +1,4 @@
-name: domain
+name: usecase
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
@@ -10,12 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  domain:
+    path: ../domain
+  injectable: any
+  get_it: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test: any
   flutter_lints: ^1.0.0
+  injectable_generator: any
+  build_runner: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
