--- a/packages/business/packages/usecase/pubspec.yaml
+++ b/packages/business/packages/usecase/pubspec.yaml
@@ -1,26 +1,25 @@
-name: presentation
+name: usecase
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  #flutter: ">=1.17.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  #injectable: any
-  #domain:
-  #  path: ../business/domain
-  #data:
-  #  path: ../business/data
-  #usecase:
-  #  path: ../business/usecase
+  #flutter:
+  #  sdk: flutter
+  domain:
+    path: ../domain
+  injectable: any
+  get_it: any
+  logger: any
 
 dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+  flutter_test:
+    sdk: flutter
+  test: any
   flutter_lints: ^1.0.0
   injectable_generator: any
   build_runner: any
